// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataList renders correctly 1`] = `
<div class="vd-data-list" style="width: 100%;">
  <vfadetransition-stub mode="out-in" origin="top center 0">
    <div>
      <!---->
      <ul class="vd-data-list-field pl-0">
        <datalistitem-stub label="Civility" value="" placeholder="…" class="vd-data-list-item text-body-1 mb-2"></datalistitem-stub>
        <datalistitem-stub label="Name" value="Dupont" placeholder="…" class="vd-data-list-item text-body-1 mb-2"></datalistitem-stub>
        <datalistitem-stub label="First name" value="Paul" placeholder="…" class="vd-data-list-item text-body-1"></datalistitem-stub>
      </ul>
    </div>
  </vfadetransition-stub>
</div>
`;

exports[`DataList renders correctly with a class 1`] = `
<div class="vd-data-list" style="width: 100%;">
  <vfadetransition-stub mode="out-in" origin="top center 0">
    <div>
      <!---->
      <ul class="vd-data-list-field pl-0">
        <datalistitem-stub label="Civility" value="" placeholder="…" class="vd-data-list-item text-body-1 mb-2"></datalistitem-stub>
        <datalistitem-stub label="Name" value="Dupont" placeholder="…" class="vd-data-list-item text-body-1 mb-2 custom-class"></datalistitem-stub>
        <datalistitem-stub label="First name" value="Paul" placeholder="…" class="vd-data-list-item text-body-1"></datalistitem-stub>
      </ul>
    </div>
  </vfadetransition-stub>
</div>
`;

exports[`DataList renders correctly with a title 1`] = `
<div class="vd-data-list" style="width: 100%;">
  <vfadetransition-stub mode="out-in" origin="top center 0">
    <div>
      <h4 class="text-subtitle-1 font-weight-bold mb-3">
        Informations
      </h4>
      <ul class="vd-data-list-field pl-0">
        <datalistitem-stub label="Civility" value="" placeholder="…" class="vd-data-list-item text-body-1 mb-2"></datalistitem-stub>
        <datalistitem-stub label="Name" value="Dupont" placeholder="…" class="vd-data-list-item text-body-1 mb-2"></datalistitem-stub>
        <datalistitem-stub label="First name" value="Paul" placeholder="…" class="vd-data-list-item text-body-1"></datalistitem-stub>
      </ul>
    </div>
  </vfadetransition-stub>
</div>
`;

exports[`DataList renders correctly with an action 1`] = `
<div class="vd-data-list" style="width: 100%;" flex="true">
  <transition-stub name="fade-transition" mode="out-in">
    <div>
      <!---->
      <ul class="vd-data-list-field pl-0">
        <li class="vd-data-list-item d-flex flex-wrap vd-data-list-item text-body-1 mb-2">
          <!---->
          <div class="vd-data-list-item-content">
            <div class="">
              <div class="vd-data-list-item-label text-caption" style="color: rgba(0, 0, 0, 0.6);">
                Civility
              </div>
              <div class="vd-data-list-item-value"><span class="text-body-1">…</span></div>
            </div>
            <!---->
          </div>
        </li>
        <li class="vd-data-list-item d-flex flex-wrap vd-data-list-item text-body-1 mb-2">
          <!---->
          <div class="vd-data-list-item-content">
            <div class="">
              <div class="vd-data-list-item-label text-caption" style="color: rgba(0, 0, 0, 0.6);">
                Name
              </div>
              <div class="vd-data-list-item-value"><span class="text-body-1">Dupont</span></div>
            </div> <button type="button" class="vd-data-list-item-action-btn v-btn v-btn--text theme--light v-size--small accent--text text-body-1 text-none pa-0"><span class="v-btn__content">
				Edit
			</span></button>
          </div>
        </li>
        <li class="vd-data-list-item d-flex flex-wrap vd-data-list-item text-body-1">
          <!---->
          <div class="vd-data-list-item-content">
            <div class="">
              <div class="vd-data-list-item-label text-caption" style="color: rgba(0, 0, 0, 0.6);">
                First name
              </div>
              <div class="vd-data-list-item-value"><span class="text-body-1">Paul</span></div>
            </div>
            <!---->
          </div>
        </li>
      </ul>
    </div>
  </transition-stub>
</div>
`;

exports[`DataList renders correctly with an empty list 1`] = `
<div class="vd-data-list" style="width: 100%;">
  <vfadetransition-stub mode="out-in" origin="top center 0">
    <div>
      <!---->
      <!---->
    </div>
  </vfadetransition-stub>
</div>
`;

exports[`DataList renders correctly with an icon 1`] = `
<div class="vd-data-list" style="width: 100%;">
  <transition-stub name="fade-transition" mode="out-in">
    <div>
      <!---->
      <ul class="vd-data-list-field pl-0">
        <li class="vd-data-list-item d-flex flex-wrap vd-data-list-item text-body-1 mb-2">
          <!---->
          <div class="vd-data-list-item-content">
            <div class="">
              <div class="vd-data-list-item-label text-caption" style="color: rgba(0, 0, 0, 0.6);">
                Civility
              </div>
              <div class="vd-data-list-item-value"><span class="text-body-1">…</span></div>
            </div>
            <!---->
          </div>
        </li>
        <li class="vd-data-list-item d-flex flex-wrap vd-data-list-item text-body-1 mb-2"><i aria-hidden="true" class="v-icon notranslate material-icons theme--light mr-4 mt-2" style="font-size: 24px;">test</i>
          <div class="vd-data-list-item-content">
            <div class="">
              <div class="vd-data-list-item-label text-caption" style="color: rgba(0, 0, 0, 0.6);">
                Name
              </div>
              <div class="vd-data-list-item-value"><span class="text-body-1">Dupont</span></div>
            </div>
            <!---->
          </div>
        </li>
        <li class="vd-data-list-item d-flex flex-wrap vd-data-list-item text-body-1">
          <!---->
          <div class="vd-data-list-item-content">
            <div class="">
              <div class="vd-data-list-item-label text-caption" style="color: rgba(0, 0, 0, 0.6);">
                First name
              </div>
              <div class="vd-data-list-item-value"><span class="text-body-1">Paul</span></div>
            </div>
            <!---->
          </div>
        </li>
      </ul>
    </div>
  </transition-stub>
</div>
`;

exports[`DataList renders loading state correctly 1`] = `
<div class="vd-data-list" style="width: 100%;">
  <vfadetransition-stub mode="out-in" origin="top center 0">
    <datalistloading-stub itemsnumber="3" heading="true" title-class="text-subtitle-1 font-weight-bold mb-3"></datalistloading-stub>
  </vfadetransition-stub>
</div>
`;

exports[`DataList renders loading state correctly 2`] = `
<div class="vd-data-list" style="width: 100%;">
  <vfadetransition-stub mode="out-in" origin="top center 0">
    <div>
      <!---->
      <ul class="vd-data-list-field pl-0">
        <datalistitem-stub label="Civility" value="" placeholder="…" class="vd-data-list-item text-body-1 mb-2"></datalistitem-stub>
        <datalistitem-stub label="Name" value="Dupont" placeholder="…" class="vd-data-list-item text-body-1 mb-2"></datalistitem-stub>
        <datalistitem-stub label="First name" value="Paul" placeholder="…" class="vd-data-list-item text-body-1"></datalistitem-stub>
      </ul>
    </div>
  </vfadetransition-stub>
</div>
`;
